Revision history for Perl extension DFA::Command.

1.00  Tue May 24 14:02:00 2011
	  - Co-maint is now with Ron Savage, who will do all future development, starting with this version.
	  - Rewrite Set::FA::Element to use getters/setters via Hash::FieldHash, rather than use direct
	  	access to the underlying hash.
	  - Change some parameters to Set::FA::Element.new(). See docs for details:
	  	o accept is now called accepting, since accept() is a method.
		o die_on_loop is a new option.
		o logger is a log object of some sort. I prefer Log::Handler. Log::Agent is not supported.
		o start is a new option.
		o states is not supported. The list of states in the transitions parameter is used instead.
		o Add (within the code) parentheses to the regexp parameter in the transitions option, if
		  it's not a coderef, to support the match() method.
		o verbose is a new option.
	  - New methods for Set::FA::Element:
	  	o build_stt.
	  	o current().
		o data().
	  	o die_on_loop().
		o id().
		o log().
		o logger().
		o match().
		o report().
		o start().
		o validate().
		o verbose().
	  - Set::FA got a fresh paint job, too, but since it's parent is Set::Object, Hash::FieldHash was not
	  	used.
	  - Rewrite the documentation.

0.101 Fri Mar 22 12:00:00 2002
	  - Added unified representation for transition rules.
	  - Rewrote clone() with a recursive deep copy.

0.100 Mon Mar 18 12:00:00 2002
	  - Initial release.