@@ -17,6 +17,10 @@ Module::Build -> new
  },
  requires =>
  {
+	 attributes      => 0.12,
+	 Capture::Tiny   => 0.10, # For testing.
 	 Hash::FieldHash => 0.10,
+	 parent          => 0.224,
+	 Set::Object     => 1.28,
  },
 ) -> create_build_script();
