@@ -34,6 +34,8 @@ o verbose().
 - Set::FA got a fresh paint job, too, but since it's parent is Set::Object, Hash::FieldHash was not
 used.
 - Rewrite the documentation.
+- Add Build.PL.
+- Clean up Makefile.PL.
 EOT
 
 [V 0.101]
